--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.Pane {
+  overflow: visible !important;
+}
+
+.Pane.vertical:nth-child(3) {
+  z-index: 1;
+}
